Improve lighter metrics (#225)